--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   firebase_auth: ^3.3.3
   firebase_core: ^1.10.0
   flutter_splash_screen: ^3.0.0
+  cloud_firestore: ^3.5.1
 
 
 dev_dependencies:
