--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,7 +24,7 @@ android {
         applicationId = "com.example.ecommerce"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
+        minSdkVersion 23
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
@@ -41,14 +41,6 @@ android {
 
 flutter {
     source = "../.."
-}
-
-dependencies {
-    // Firebase dependencies
-    implementation 'com.google.firebase:firebase-auth:21.0.6'  // Firebase Authentication
-    implementation 'com.google.firebase:firebase-firestore:24.0.1'  // Firestore Database
-    implementation 'com.google.firebase:firebase-core:21.0.0'  // Firebase Core (Required for Firebase SDK)
-    implementation 'com.google.android.gms:play-services-auth:20.1.0'  // Google Play Services for Auth
 }
 
 apply plugin: 'com.google.gms.google-services'
