--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,8 @@ dependencies:
   firebase_core: ^3.8.0
   flutter_splash_screen: ^3.0.0
   cloud_firestore: ^5.5.0
-
+  image_downloader: ^0.31.0
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
