--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,6 +1,7 @@
 // Root-level build.gradle (android/build.gradle)
 
 buildscript {
+    ext.kotlin_version = '1.9.24'
     repositories {
         google()      // Add Google's repository
         mavenCentral() // Add Maven Central repository
@@ -8,6 +9,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:7.3.1'  // Android Gradle Plugin
         classpath 'com.google.gms:google-services:4.4.2'  // Google Services plugin (apply it later)
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.24'
     }
 }
 
