--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   cloud_firestore: ^5.5.0
   google_fonts: ^6.2.1
   flutter_dotenv: ^5.2.1
+  animated_text_kit: ^4.2.1
 
 dev_dependencies:
   flutter_test:
