--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_dotenv: ^5.2.1
   animated_text_kit: ^4.2.1
+  sticky_headers: ^0.3.0+2
 
 dev_dependencies:
   flutter_test:
