--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_dotenv: ^5.2.1
   animated_text_kit: ^4.2.1
   sticky_headers: ^0.3.0+2
+  pay: ^2.0.0
 
 dev_dependencies:
   flutter_test:
