--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   animated_text_kit: ^4.2.1
   sticky_headers: ^0.3.0+2
   checkout_screen_ui: ^1.0.1
+  flutter_staggered_grid_view: ^0.7.0
 
 dev_dependencies:
   flutter_test:
