--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   sticky_headers: ^0.3.0+2
   checkout_screen_ui: ^1.0.1
   flutter_staggered_grid_view: ^0.7.0
+  widget_and_text_animator: ^1.1.5
 
 dev_dependencies:
   flutter_test:
