--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -3,5 +3,5 @@ android.useAndroidX=true
 android.enableJetifier=true
 org.gradle.daemon=true
 org.gradle.parallel=true
-org.gradle.caching=false
+org.gradle.caching=true
 
